--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
     <string name="asset_desc"><b>Asset</b> (Bank accounts, investment/brokerage accounts, cash, etc.)</string>
     <string name="debt_desc"><b>Debt</b> (Credit card balances, mortgages, car loans, etc.)</string>
 
-    <string name="menu_update">Update Account</string>
-    <string name="menu_delete">Delete Account</string>
+    <string name="menu_update_acc">Update Account</string>
+    <string name="menu_delete_acc">Delete Account</string>
 
     <string name="configure_add_title">Add an Account</string>
     <string name="configure_update_title">Update Account</string>
@@ -57,6 +57,10 @@
     <string name="error_category_dialog">Please select a category.</string>
     <string name="budget_name_hint">Name</string>
     <string name="budget_amount_hint">Amount</string>
+
+    <string name="menu_edit_trans">Edit Transaction</string>
+    <string name="menu_delete_trans">Delete Transaction</string>
+    <string name="delete_trans_msg">Are you sure you want to permanently delete this transaction?</string>
 
     <!-- Menu Strings -->
     <string name="edit_budget">Edit Budget</string>
