--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,9 @@
     <string name="settings_label">Settings</string>
     <string name="create_pin_dialog">Create 4-digit PIN</string>
     <string name="confirm_pin_dialog">Confirm 4-digit PIN</string>
-    <string name="pin_message_dialog">PIN doesn't match. Please try again.</string>
+    <string name="pin_message_dialog">PIN doesn\'t match. Please try again.</string>
+    <string name="pin_message_splash">Incorrect PIN. Please try again.</string>
+    <string name="pin_enter">Enter PIN</string>
 
     <!-- Display Accounts -->
     <string name="assets_label">ASSETS</string>
